# pyphomemo

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  build.sh  pyphomemo.spec  pyproject.toml
.github/workflows/: release.yml
src/pyphomemo/: __init__.py  __main__.py  api.py  cli.py  imaging.py  models.py  printer.py  protocol.py  server.py
src/pyphomemo/templates/: index.html
