[project]
name = "pyphomemo"
version = "0.2.0"
description = "CLI, web server, and library to print text and images on a Phomemo M110 label printer over Bluetooth LE"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Manuel Kuhlmann" }]
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "bleak>=0.21",
    "pillow>=10.0",
    "python-multipart>=0.0.9",
    "jinja2>=3.1",
]

[project.scripts]
phomemo = "pyphomemo.cli:app"

[dependency-groups]
build = ["pyinstaller>=6.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pyphomemo"]
